[build-system] 
requires = ["scikit-build-core>=0.11", "pybind11>=3.0"]
build-backend = "scikit_build_core.build"

[project]
name = "fastreplay"
version = "0.1.0"
description = "Atomic-based SPSC ring buffer for RL"
requires-python = ">=3.10"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[tool.pytest.ini_options]
testpaths= ["tests"]